syntax = "proto3";

package helloworld;

option go_package = "github.com/salrashid123/grpc_stats_envoy_istio/app/helloworld";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloClientStream(stream HelloRequest) returns (HelloReply) {}    
  rpc SayHelloServerStream(HelloRequest) returns (stream HelloReply) {}   
  rpc SayHelloBiDiStream(stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
