package main

import (
	"crypto/tls"
	"crypto/x509"
	"flag"
	"fmt"
	"io"
	"log"
	"os"
	"time"

	pb "github.com/salrashid123/grpc_stats_envoy_istio/app/helloworld"

	"golang.org/x/net/context"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials"
	healthpb "google.golang.org/grpc/health/grpc_health_v1"
)

var (
	address        = flag.String("host", "localhost:8080", "host:port of gRPC server")
	cacert         = flag.String("cacert", "root-ca.crt", "TLS CACert")
	usetls         = flag.Bool("usetls", false, "startup with TLS")
	skipHealhCheck = flag.Bool("skipHealhCheck", false, "Skip direct Healthcheck call")
	serverName     = flag.String("servername", "grpc.domain.com", "SNI Name")
)

const (
	defaultName = "world"
)

func main() {
	flag.Parse()

	// Set up a connection to the server.
	// Set up a connection to the server.
	var conn *grpc.ClientConn
	var err error

	if !*usetls {
		conn, err = grpc.Dial(*address, grpc.WithInsecure())
	} else {
		var tlsCfg tls.Config
		rootCAs := x509.NewCertPool()
		pem, err := os.ReadFile(*cacert)
		if err != nil {
			log.Fatalf("failed to load root CA certificates  error=%v", err)
		}
		if !rootCAs.AppendCertsFromPEM(pem) {
			log.Fatalf("no root CA certs parsed from file ")
		}
		tlsCfg.RootCAs = rootCAs
		tlsCfg.ServerName = *serverName

		ce := credentials.NewTLS(&tlsCfg)
		conn, err = grpc.Dial(*address, grpc.WithTransportCredentials(ce))
	}

	defer conn.Close()
	c := pb.NewGreeterClient(conn)

	ctx := context.Background()

	// ******** HealthCheck

	ctx, cancel := context.WithTimeout(ctx, 3*time.Second)
	defer cancel()

	if !*skipHealhCheck {
		resp, err := healthpb.NewHealthClient(conn).Check(ctx, &healthpb.HealthCheckRequest{Service: "helloworld.Greeter"})
		if err != nil {
			log.Fatalf("HealthCheck failed %+v", err)
		}
		if resp.GetStatus() != healthpb.HealthCheckResponse_SERVING {
			log.Fatalf("service not in serving state: ", resp.GetStatus().String())
		}
		log.Printf("RPC HealthChekStatus:%v", resp.GetStatus())
	}
	// ******** Unary Request
	for i := 0; i < 5; i++ {
		r, err := c.SayHello(ctx, &pb.HelloRequest{Name: defaultName})
		if err != nil {
			log.Fatalf("could not greet: %v", err)
		}
		log.Printf("Unary Request Response:  %s", r.Message)
	}
	// ******** CLIENT Streaming

	cstream, err := c.SayHelloClientStream(context.Background())

	if err != nil {
		log.Fatalf("%v.SayHelloClientStream(_) = _, %v", c, err)
	}

	for i := 1; i < 5; i++ {
		if err := cstream.Send(&pb.HelloRequest{Name: fmt.Sprintf("client stream RPC %d ", i)}); err != nil {
			if err == io.EOF {
				break
			}
			log.Fatalf("%v.Send(%v) = %v", cstream, i, err)
		}
	}

	creply, err := cstream.CloseAndRecv()
	if err != nil {
		log.Fatalf("%v.CloseAndRecv() got error %v, want %v", cstream, err, nil)
	}
	log.Printf(" Got SayHelloClientStream  [%s]", creply.Message)

	/// ***** SERVER Streaming
	stream, err := c.SayHelloServerStream(ctx, &pb.HelloRequest{Name: "Stream RPC msg"})
	if err != nil {
		log.Fatalf("SayHelloStream(_) = _, %v", err)
	}
	for {
		m, err := stream.Recv()
		if err == io.EOF {
			t := stream.Trailer()
			log.Println("Stream Trailer: ", t)
			break
		}
		if err != nil {
			log.Fatalf("SayHelloStream(_) = _, %v", err)
		}

		log.Printf("Message: [%s]", m.Message)
	}

	/// ********** BIDI Streaming

	done := make(chan bool)
	stream, err = c.SayHelloBiDiStream(context.Background())
	if err != nil {
		log.Fatalf("open stream error %v", err)
	}
	ctx = stream.Context()

	go func() {
		for i := 1; i <= 10; i++ {
			req := pb.HelloRequest{Name: "Bidirectional CLient RPC msg "}
			if err := stream.SendMsg(&req); err != nil {
				log.Fatalf("can not send %v", err)
			}
		}
		if err := stream.CloseSend(); err != nil {
			log.Println(err)
		}
	}()

	go func() {
		for {
			resp, err := stream.Recv()
			if err == io.EOF {
				close(done)
				return
			}
			if err != nil {
				log.Fatalf("can not receive %v", err)
			}
			log.Printf("Response: [%s] ", resp.Message)
		}
	}()

	go func() {
		<-ctx.Done()
		if err := ctx.Err(); err != nil {
			log.Println(err)
		}
		close(done)
	}()

	<-done

}
